@@ -588,6 +588,8 @@ Where to put .nget4 directory. (put nget files $HOME/.nget4/)
 Override HOME var (put nget files in $NGETHOME)
 .IP "NGETCACHE"
 Override HOME/NGETHOME vars and .ngetrc cachedir option (put nget cache files in $NGETCACHE)
+.IP "NGETRC"
+Alternate configuration file to use.
 .SH FILES
 .PP
 .IP "~/.nget4/"
